cabal-version: 2.2
name: epilog
homepage: https://github.com/daig/epilog#readme
version: 0.1.0.0
category: Language
synopsis: Prolog syntax parsing and translation
description: Prolog syntax parsing and translation
stability: cursed
bug-reports: https://github.com/daig/epilog/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/daig/epilog

common x
  default-language: Haskell2010
  default-extensions: PatternSynonyms, LambdaCase, DerivingStrategies, ViewPatterns
                    , DerivingVia, StandaloneDeriving, TypeApplications, TypeSynonymInstances
                    , FlexibleInstances, DeriveDataTypeable, DeriveGeneric, GeneralizedNewtypeDeriving
                    , OverloadedStrings, MultiWayIf, TupleSections

library
  import: x
  exposed-modules: Syntax, Parser, Gen
  build-depends: base, syb, parsec, QuickCheck
